[gd_scene load_steps=9 format=3 uid="uid://c33xd57mkcr06"]

[ext_resource type="Script" path="res://UI/hud.gd" id="1_l3ogy"]
[ext_resource type="Resource" uid="uid://3ta7j457fmy2" path="res://resources/hud_data.tres" id="2_rwaqj"]
[ext_resource type="AudioStream" uid="uid://bsmgufsp6vdfx" path="res://assets/sounds/drop2.WAV" id="3_hsf2w"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_6rcqw"]
size = Vector2(32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r8ner"]
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5isnj"]
bg_color = Color(0, 0, 0, 0.75)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 24.0
expand_margin_top = 24.0
expand_margin_right = 24.0
expand_margin_bottom = 24.0

[sub_resource type="InputEventAction" id="InputEventAction_op06m"]
action = &"confirm"

[sub_resource type="Shortcut" id="Shortcut_yu7vc"]
events = [SubResource("InputEventAction_op06m")]

[node name="Hud" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_l3ogy")
data = ExtResource("2_rwaqj")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.118, 0.222, 0.142, 0.25)

[node name="KeyHBox" type="HBoxContainer" parent="."]
offset_left = 16.0
offset_top = 8.0
offset_right = 217.0
offset_bottom = 72.0

[node name="KeySprite" type="TextureRect" parent="KeyHBox"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_6rcqw")
stretch_mode = 5

[node name="KeyLabel" type="Label" parent="KeyHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.193526, 0.717237, 0.348251, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_r8ner")
text = "KeyLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = -44.0
offset_right = 187.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_5isnj")
text = "Center Label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -216.0
offset_right = 120.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_yu7vc")
text = "Start Game"

[node name="MessageLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 400.0
grow_vertical = 0
text = "Hello World"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="MessageAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hsf2w")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
